hphp/test/zend/good/Zend/tests/traits/inheritance003.php.expectf
World!

Fatal error: Declaration of MyHelloWorld::sayHello() must be compatible with that of Base::sayHello() in %s/inheritance003.php on line 24
